language/move-lang/tests/move_check/translated_ir_tests/commands/unpack_wrong_type.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/unpack_wrong_type.move:6:9 ───
   │
 6 │         X { b: _ } = t;
   │         ^^^^^^^^^^ Invalid deconstruction assignment
   ·
 6 │         X { b: _ } = t;
   │         ---------- The type: '0x8675309::Test::X'
   ·
 5 │     public fun destroy_t(t: T) {
   │                             - Is not compatible with: '0x8675309::Test::T'
   │

